<resources>
    <string name="app_name">Simple Form</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_details">User Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="college">College</string>
    <string name="is_college_completed">is college completed?</string>
    <string name="are_you_happy">are you happy?</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="display_result">Display Result</string>
    <string name="first_name2">First Name:</string>
    <string name="last_name2">Last Name:</string>
    <string name="college2">College:</string>
    <string name="gender2">Gender:</string>
    <string name="is_college_completed2">Is College Completed?:</string>
    <string name="are_you_happy2">Are You Happy?:</string>
</resources>