<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FirstFragment">

        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/user_details"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_details">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/college_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/college_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/college" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/is_college_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_college_completed" />

            <CheckBox
                android:id="@+id/are_you_happy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_happy" />


            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/your_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/clear_text"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textColor="#3F51B5" />

            <Button
                android:id="@+id/save_text"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="#3F51B5" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>